fix: make subqueries alternative retrieval routes
